--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ contourpy==1.3.0
 crcmod==1.7
 cryptography==43.0.3
 cycler==0.12.1
-datasets==3.1.0
+datasets
 diffusers==0.31.0
 dill==0.3.8
 docker-pycreds==0.4.0
@@ -48,7 +48,6 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.2
 mdurl==0.1.2
-mmcv-full==1.7.2
 mmdet==2.26.0
 model-index==0.1.11
 modelcards==0.1.6
@@ -58,29 +57,6 @@ multiprocess==0.70.16
 networkx==3.2.1
 ninja==1.11.1.1
 numpy==1.26.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu11==10.2.10.91
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu11==2.14.3
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu11==11.7.91
-nvidia-nvtx-cu12==12.4.127
 opencv-python==4.10.0.84
 opendatalab==0.0.10
 openmim==0.3.9
@@ -123,9 +99,6 @@ terminaltables==3.1.10
 tifffile==2024.8.30
 tokenizers==0.20.3
 tomli==2.1.0
-torch==2.1.0+cu121
-torchaudio==2.1.0+cu121
-torchvision==0.16.0+cu121
 tqdm==4.65.2
 transformers==4.46.2
 triton==2.1.0
